--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "natt",
-    "version": "1.0.0",
+    "name": "bara",
+    "version": "0.0.1",
     "description": "",
     "main": "./src/index.ts",
     "scripts": {
